objects/privacycenter__Data_Object__mdt.object
<CustomObject>
    <fields>
        <fullName>privacycenter__API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Archive_Value__c</fullName>
        <label>Archive Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>delete</fullName>
                </value>
                <value>
                    <fullName>archive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privacycenter__Batch_Data__c</fullName>
        <label>Batch Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Child_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Data_Policy__c</fullName>
        <label>Data Policy</label>
        <referenceTo>privacycenter__Data_Policy__mdt</referenceTo>
        <relationshipLabel>Data Objects</relationshipLabel>
        <relationshipName>Data_Objects</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>privacycenter__Filter_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Hard_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Last_Prepped_Date__c</fullName>
        <label>Last Prepped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>privacycenter__Master_Object__c</fullName>
        <label>Master Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Number_of_Fields__c</fullName>
        <label>Number of Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privacycenter__Parent_Object_API_Name__c</fullName>
        <label>Parent Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Parent_Object_ID__c</fullName>
        <label>Parent Object ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Raw_Filter_Data__c</fullName>
        <label>Raw Filter Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Record_Caching__c</fullName>
        <label>Record Caching</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cache Original</fullName>
                </value>
                <value>
                    <fullName>Cache Transformation</fullName>
                </value>
                <value>
                    <fullName>No Cache</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privacycenter__Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privacycenter__Record_Retention__c</fullName>
        <label>Record Retention</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transform</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privacycenter__Run_In_Poly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run In Poly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Run_In_Serial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run In Serial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Where_Criteria_LT__c</fullName>
        <label>Where Criteria SOQL LT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Where_Criteria_PG_Cache_LT__c</fullName>
        <label>Where Criteria PG Cache LT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Where_Criteria_PG_Cache__c</fullName>
        <label>Where Criteria PG Cache</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Where_Criteria_PG_LT__c</fullName>
        <label>Where Criteria PG Salesforce LT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Where_Criteria_PG__c</fullName>
        <label>Where Criteria PG Salesforce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Where_Criteria__c</fullName>
        <label>Where Criteria SOQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Object</label>
    <listViews>
        <fullName>privacycenter__AllDetailView</fullName>
        <columns>privacycenter__Data_Policy__c</columns>
        <columns>privacycenter__API_Name__c</columns>
        <columns>privacycenter__Parent_Object_API_Name__c</columns>
        <columns>DeveloperName</columns>
        <columns>privacycenter__Active__c</columns>
        <columns>privacycenter__Child_Object__c</columns>
        <columns>privacycenter__Master_Object__c</columns>
        <columns>privacycenter__Parent_Object_ID__c</columns>
        <columns>privacycenter__Record_Retention__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllDetailView</label>
    </listViews>
    <listViews>
        <fullName>privacycenter__AllQueryView</fullName>
        <columns>privacycenter__Active__c</columns>
        <columns>DeveloperName</columns>
        <columns>privacycenter__API_Name__c</columns>
        <columns>privacycenter__Child_Object__c</columns>
        <columns>privacycenter__Parent_Object_API_Name__c</columns>
        <columns>privacycenter__Where_Criteria_PG_LT__c</columns>
        <columns>privacycenter__Where_Criteria_PG_Cache_LT__c</columns>
        <columns>privacycenter__Record_Retention__c</columns>
        <columns>privacycenter__Master_Object__c</columns>
        <columns>privacycenter__Raw_Filter_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllQueryView</label>
    </listViews>
    <pluralLabel>Data Objects</pluralLabel>
</CustomObject>